Amorphous God: Less romance, more cosmic

--- a/TheAmorphousGod.tex
+++ b/TheAmorphousGod.tex
@@ -77,7 +77,7 @@
 Ever since my cousin died screaming and insane, I had been afraid. 
 
 I am Suthis Mephilex. 
-All my life I have dwelt under the roofs of the castle-city of \Yormis, where we \scathae rule and the \humans serve.%
+All my life I have dwelt under the roofs of the castle-city of \Yormis, where we \scathae rule\dash we, the reptilian folk\dash and where the only \humans are servants.%
 \index{\human}%
 \index{\scatha}%
 \index{\Yormis}
@@ -159,8 +159,8 @@ I awoke gagging and gasping for air, and long after I could feel the corruption 
 In those weeks my nerves and health alike hung in tatters, and my enemies noticed my weakness.
 Chief among them was Jaslar Thul. 
 Clan enemies since the time we were eggs, Thul and I had fought throughout our childhood and youth. 
-Once, when I was fourteen, Thul stole away the first boy I liked and poisoned him against me with her slander. 
-Since then I had hated her with all my heart. 
+More than once she had taken my friends and poisoned them against me with her slander. 
+I had hated her with all my heart. 
 
 After word got out that Dristan's initiation had killed him, I knew that Thul and her cohorts would use it against me. 
 %In my state I had not the strength to rally my own social circle against her, so I avoided her whenever possible, but I could not wholly hide from them. 
@@ -298,12 +298,13 @@ He spread wide his arms.
 
 And as we walked on, my grandfather told me about the Master. 
 He told me of the antediluvian ages when the Master's people reigned.
-For the Master was not a \scatha but the scion of an elder and superior race.%
+For the Master was not a \scatha like us but the scion of an elder and superior reptilian race.%
 \index{\scatha}
-Long before the \humans founded their \VaimonCaliphate; before the \human race and even the \scatha race existed, this city stood.%
+Long before the \humans founded their \VaimonCaliphate\dash indeed, before the \humans existed, before even the \scatha race existed, this city stood.%
 \index{\human}%
 \index{\VaimonCaliphate}
-It was built by the founder race, who were the spawn of \dragons and the progenitors of the \scathae.%
+It was built by the founder race, called the \ophidians by some.
+They were the spawn of \dragons and the progenitors of the \scathae.%
 \index{\dragon}
 For uncounted millennia they ruled \Miith, using their mighty arts to reshape mountains and seas and even life itself. 
 
@@ -331,7 +332,7 @@ I looked up at my grandfather.
 \ta{Yes, grandfather.}
 
 \ta{And then you will meet another, mightier than even he.
-  A hidden one.
+  A hidden one, older and greater than this world.
   But that is for later.}
 
 We walked on in silence. 
@@ -604,7 +605,7 @@ I crawled behind the statue and crouched down in a small space underneath its ta
 It was cramped and painful, but I am a small \scatha. 
 
 I wove a quick spell of concealment about myself:
-\ta{Merciful \Nasshikerr,} I intoned in the secret \Draconic tongue, 
+\ta{Merciful \Nasshikerr,} I intoned in the melodious spellwords of Mystic Talaac, 
 \ta{stretch out thy hand and shield me from my enemies' eyes.}%
 \index{\Nasshikerr}
 I had no pact with \Nasshikerr, goddess of shadows and the hidden, so I could only hope my spell would have some effect. 
@@ -636,7 +637,7 @@ Was this some other entity?
 What was it my grandfather had said? 
 That there was another, a hidden one.
 
-\tho{Who or what is \Ubloth?}
+\tho{What is \Ubloth? Or who?}
 
 
 
@@ -691,6 +692,7 @@ The words I had gleaned from the book flashed before my eyes:
 \emph{%
   Purification\prikker 
   the distilled essence of \Ubloth\prikker 
+  the \nexus transcends flesh, transcends bodies, transcends generations\prikker
   bound in flesh and spirit\prikker 
   the soul of \Ubloth\prikker}
 
@@ -746,11 +748,14 @@ The mute souls groped at me, and all the while Dristan's voice droned on:
   It consumes you from within. 
   Once you drink its ichor, it owns your soul. 
   Its soul is yours.
+  You are part of its \nexus.
   \Ubloth.
   The hidden god. 
+  The god beyond all earthly gods.
+  Older than the world.
   The heart of the underworld. 
   The soul of the Suthis clan.
-  We are bound to it\prikker}
+  We are bound to its\prikker}
 
 \ta{\MakeUppercase{Stop}!} I cried. 
 
@@ -840,6 +845,7 @@ I had no strength to repress it.
 \tele{%
   It is here. 
   The devourer.
+  The god beyond gods.
   The heart of the underworld. 
   The fountain of corruption. 
   The soul of Clan Suthis.}
@@ -896,7 +902,7 @@ I began to read.
   \prikker in this life and the next. 
   Cleave unto me\prikker thy power. 
   Feed me with\prikker to feed thee in turn. 
-  My body and soul\prikker for I am Suthis. 
+  My body and soul\prikker in thy \nexus, for I am Suthis. 
   As thou gave birth to\prikker I return to thee\prikker give birth to me again. 
   In this cycle is our clan\prikker 
   \prikker our covenant.
@@ -952,11 +958,21 @@ There it lay.
 
 I must struggle for words to describe it. 
 Colossal. 
+Unimaginably vast\dash filling the entire cavern and more. 
 Amorphous. 
 A seething and bubbling pit of pure vileness and filth. 
-At least a hundred feet across, filling half the cavern. 
 An ocean of horrid pulpy flesh, with vast pseudopods like waves forming, rising and crashing. 
 Glowing with a dead gray luminescence, its surface showing glimpses of silently screaming faces. 
+
+Its size could not be measured. 
+The cavern was perhaps a hundred feet across, but this thing was greater. 
+It seemed to me that the thing was not \emph{in} the cavern, not even \emph{in the world}\dash rather, I thought, the monstrosity was a world ocean, and the world I knew was an island floating on its surface.
+It was not merely in the cavern below. 
+It was in the rocks, in the earth. 
+Its horror permeated everything, oozed into everything. 
+Nothing was beyond its taint. 
+
+The god beyond gods. 
 
 The heart of corruption. 
 The heart of Clan Suthis. 
@@ -965,7 +981,7 @@ The heart of Clan Suthis.
   It cannot be this\prikker this abomination.}
 
 Insanity held me in a grip, and I found myself climbing higher, closer. 
-The loathsome mass called to me, and I must answer.
+The loathsome mass below called to me, and I must answer.
 I hated it. 
 I longed for it. 
 
@@ -976,9 +992,11 @@ I glanced down and saw Jaslar Thul pointing at me.
 
 \ta{Get her!
   Pull yourselves together.
-  The slime is not going to attack us. 
+  The slime is not going to eat you.
   Just keep your distance from it.
   Now go!}
+
+The Jaslar soldiers overcame their horror and crept towards my perch with swords in hand, having long since discharged their guns. 
 
 I looked around. 
 I was surrounded. 
@@ -995,11 +1013,14 @@ I was dead.
 And yet I must. 
 For I understood that whether I wanted it or not, I was already bound to it. 
 
-I found myself crawling forward.
-
 \ta{I have you now, Suthis Mephilex,} said Thul.
 \ta{This time you are going to die. 
-  Cowering in the filth like the weakling you are.}
+  Cowering. Weak. Worthless!}
+
+I found myself crawling forward.
+
+\tho{But I don't know the spell. 
+  The scroll is damaged\ldots}
 
 \tele{I know the spell. 
   Let me help you, Mephilex. 
@@ -1046,6 +1067,10 @@ The essence of \Ubloth coursed through my veins.
 I became one with it. 
 
 And in a flash of insight I understood everything. 
+Immortal \Ubloth, older than the first \dragon, is but the maggot spawn of a race of cosmic gods too dreadful to contemplate. 
+Far removed from the petty wars and empires of humanoids, far above our pitiful lives, its horrid kind has infested the myriad realms of universe for millions of years. 
+They are tumours upon the very fabric of the cosmos. 
+
 I understood the symbiosis of Clan Suthis with \Ubloth. 
 Every mage of the clan has sworn a pact with the loathsome god: to feed it with sacrifices of flesh and souls, and in return it feeds us with sorcerous power.  
 We drink its effluvium and feed it our own blood. 
@@ -1096,8 +1121,7 @@ I raised my arms.
 \tho{\Ubloth.
   I am thine.
   Let thy power flow through me.} 
-And from \Ubloth's shapeless bulk arose tendrils of vapour. 
-Blinded souls flew shrieking through the air.
+And from \Ubloth's shore below there flew into the air a throng of shrieking blinded souls, forming tendrils of vaporous ectoplasma. 
 
 Terror shone in Jaslar Thul's eyes. 
 She could not turn away. 
@@ -1106,7 +1130,7 @@ The tendrils snaked through the air.
 
 Thul glanced around and found her cohorts likewise frozen in terror. 
 
-The tendrils closed in. 
+The howling tendrils closed in. 
 
 At the last moment Thul turned and ran. 
 
@@ -1121,12 +1145,12 @@ The ghostly tentacles lifted her into the air.
 This broke the hold of terror on Thul's lackeys. 
 They fled in blind panic. 
 I flexed my hands.
-More tendrils snaked out and snatched them with ease. 
+More wailing tendrils snaked out and snatched them, clutched them between gaping faces and blindly groping hands. 
 
 \ta{A weakling, am I, Jaslar?} I said.
 
 I pulled her closer to me.
-Closer to \Ubloth.
+Closer to the surface of \Ubloth.
 
 She squirmed. 
 \ta{Not this\prikker let me live\prikker Suthis, please\prikker}
@@ -1134,19 +1158,19 @@ She squirmed.
 \ta{No.}
 
 I flicked my hand.
-The tentacles plunged Jaslar Thul and her sycophants screaming into the slime. 
+The tentacles plunged Jaslar Thul and her sycophants screaming into the ocean of slime. 
 Their souls would not return to their gods.
-They would be devoured by \Ubloth and join the silently wailing throng of the damned. 
+They would be absorbed by \Ubloth and join the silently wailing throng of the damned. 
 
 I had triumphed. 
 
 It was finished. 
 
 %They say that I am a prodigy, and that only this allowed me to survive this twofold ordeal.
-I need not tell you the details of how I found my way back to the surface, nor of how I was later brought before the Master and gave my allegiance to him.
+I need not tell you the details of how I found my way back to the surface, nor of how I was later brought before the Master and gave my allegiance to him. 
 
 But I will tell you one more thing. 
-I will tell you of the crowning horror of my ordeal. 
+I will tell you of that which\dash for me\dash stands as the crowning horror of my ordeal. 
 I will tell you what sparked my flash of insight and made me understand the slavering inhuman evil of this loathsome shapeless thing which I am now forever pledged to serve, in this life and the next. 
 It was this realization that shattered all peace of mind, perhaps forever. 
 For when I plunged into the slime I saw before me one face stare back at me with vacant blinded eyes. 
