Hold until I come draft 1

--- a/Commands.tex
+++ b/Commands.tex
@@ -6438,8 +6438,8 @@
   \author{%
     Claus Appel \\ 
     \href%
-      {mailto:spectrumdt@gmail.com}%
-      {spectrumdt@gmail.com}%
+      {mailto:clausappel@protonmail.com}%
+      {clausappel@protonmail.com}%
   }
   \makeindex
   \frenchspacing
