--- a/World/OphidianRaces.tex
+++ b/World/OphidianRaces.tex
@@ -1929,12 +1929,46 @@ Many epitomes were originally based on a living \caisith.
 These heroes were idolized in their lifetime, becoming powerful \hr{Hierarch}{hierarchs}. 
 After death they were still idolized, and all this psychic energy flowing from \hr{Basal}{basals} and \hr{Paraclete}{paracletes} coalesced in the spiritual world and turned into great \daemons that could grant \quo{prayers} and effect magical \quo{miracles}. 
 
+Some Epitomes are considered "higher" than others. This is highly subjective and contentions, based on one's personal belief of what the highest ideals of Zotha and Asheen are. 
+
+Most ancient caisith drew upon the Epitomes for their sorcery. Epitomes are power vessels created by the caisith nexuses. Caisith tribes and kingdoms will subconsciously invest their belief and faith into intangible ideals which gradually coalesce into semi-living vertices. (Compare them to the Chaos Gods from Warhammer and Warhammer 40,000.) These become Epitomes. They later become worshipped as holy things or gods. Many Epitomes are venerated in personified form; some are even named after and identified with individual caisith, dead or even living. A mysteriarch or other caisith leader who is identified with an Epitome can wield much of the Epitome’s power. 
+
+
+
+\begin{itemize}
+    \item 
+        One of the most important Epitomes is Insharrad, aka Nezred, representing the glory and greatness of the Caisith race. She was the legendary leader of the ancient (highly fictionalized) Caisith uprising against the Phaetonians. 
+    \item Sekesra or Segesra is the Epitome of honourable warfare - chivalry, if you will. 
+    \item
+        Jach-dun or Zagatuna is a male Epitome of warding off and vanquishing foreign foes (i.e., non-Caisith intelligent beings). His name is often invoked as an exclamation of shock. He is often called upon in war against non-Caisith foes.
+        
+        He is from the same mythological period as Insharrad. Some sages suspect that Jach-dun was originally the same historical person as Insharrad.
+        
+        Jach-dun is the original Hija form of his name, or close to it. Zagatuna is a Talaac variant. 
+
+    \item 
+        The Concord of the Caisith is guarded and upheld by three female Epitomes named Kelesh, Suthalba and Tsor. 
+        \begin{itemize}
+            \item Kelesh is the upholder of oaths. 
+            \item Suthalba is the teacher, the bringer of learning. 
+            \item Tsor is the keeper of ancient knowledge. 
+        \end{itemize}
+    
+    \item 
+        Rezrovon is the Epitome of Vengeance. He is often considered one of the "lower" Epitomes of Asheen. 
+
+    \item 
+        Druzcalacht is the Epitome of Valour, patron of champions and knights. A respected Epitome of Zotha. 
+
+\end{itemize}
+
+
 
 
 
 
 \subsubsection{Languages}
-Tow of the great \caisith languages are \hs{Kush} and \hs{Saphyr}. 
+Two of the great \caisith languages are \hs{Kush} and \hs{Saphyr}. 
 
 
 
