--- a/HoldUntilICome.tex
+++ b/HoldUntilICome.tex
@@ -22,9 +22,12 @@
 % ]{biblatex}
 \usepackage[utf8]   {inputenc}
 \usepackage[T1]     {fontenc}
+%\usepackage         {charter}
 \usepackage         {comment}
+\usepackage         {cuted}
 \usepackage         {etoolbox} 
 \usepackage         {graphicx}
+\usepackage[sc]     {mathpazo}
 \usepackage[toc]    {multitoc}
 \usepackage         {twoopt}
 \usepackage         {xspace}
