--- a/HoldUntilICome.tex
+++ b/HoldUntilICome.tex
@@ -262,6 +262,11 @@ Their fell eyes seemed to through pierce him with harpoons of dread, and Kepra h
 
 \emph{What can they do? What dread sorcery might they wield?} 
 
+Of course the hierophant and mages and founts needed to be out in the open to oversee the defense. 
+If they had been properly prepared they might have armoured carts or other shelter for the mages and founts. 
+
+If they had been properly prepared they would also have more men.
+
 \emph{I hope Lord Iscrafel and his army will be here soon.}
 
 Then a surge of warmth welled up in him, sweeping away the dread like water sweeps away filth. 
@@ -539,7 +544,8 @@ That was his own inner voice.
 
 The resphan dipped down to strike at the hierophant. 
 Aeocryth dropped to the ground as a brave suchian warrior armed with sword and shield leapt to her defense. 
-Aeocryth's eyes followed the warrior as he sprang, almost as if she was controlling him like a puppet.
+Aeocryth's eyes followed the warrior as he sprang, as if she was controlling his body.
+%Aeocryth's eyes followed the warrior as he sprang, almost as if she was controlling him like a puppet.
 
 The resphan kicked from above. 
 The suchian warded off one hit with his shield. 
@@ -549,11 +555,11 @@ He fell to one knee with a grunt.
 
 Kepra looked around. 
 
-\emph{What can I do?}
-
 \emph{Do something!}
 
 Was this his own voice?
+
+\emph{What can I do?}
 
 His eyes scanned.
 
@@ -563,12 +569,12 @@ The resphan landed. She unsheathed a sword and strode towards Aeocryth and her d
 
 Kepra picked up the gun. 
 
-The battered suchian swordsman staggered forward to meet the resphan. Aeocryth gritted her teeth. The man raised his shield with a weary arm and a cry of ``Zotha!''
+The battered suchian swordsman staggered forward to meet the resphan. Aeocryth gritted her teeth. Although his strength was almost spent, the man raised his shield with a defiant cry of ``Zotha!''
 
 Kepra fumbled to check the gun. 
 
 The resphan kicked the warrior's shield aside with one talon. 
-He fell to one knee again. 
+He stumble down on one knee again. 
 Aeocryth hissed and clenched her fist.
 The warrior tried to raise the shield again but failed. 
 He held up his sword. 
@@ -578,13 +584,13 @@ The gun was loaded.
 A talon lashed out. Blades clashed again. The suchian’s sword fell from his hand. Another talon kicked. This time the blade rammed through his skull. 
 The resphan pulled back her foot and he slumped, half of his head gone.
 
-Aeocryth let slip a wordless yelp of terror.
+The old cleric let slip a wordless yelp of terror.
 
 \emph{How can I fight a foe like that?} thought Kepra. \emph{We are all going to die!}
 
 The resphan took a step. Aeocryth took a step back. Her eyes locked on Kepra.
 
-\emph{No! We must live! Asheen! Jach-dun! Zotha!}
+\emph{No! We cannot give up. We must live! Asheen! Jach-dun! Zotha!}
 
 The resphan had the hierophant in her reach now.
 Kepra raised his gun. 
@@ -598,16 +604,16 @@ Aeocryth bit down.
 
 Kepra fired. 
 
-At point-blank range the bullet tore through the resphan’s wing. 
+At this point-blank range the bullet tore through the resphan’s wing. 
 Bloody feathers scattered. 
-She let out a grunt of outrage. 
+She let out a snarl of outrage. 
 She turned to face him. 
 Her eyes drilled through him and transfixed him with terror. 
 Those eyes seem to suck out his soul, like vortex tunnels to some horrific world of eternal blackness and death. 
 
-The resphan advanced on him. 
-
 Dimly he began to hear a monotonous droning noise in the distance.
+
+Kepra's legs carried him a step forward. 
 
 %Kepra feels Aeocryth’s powerful presence. 
 \emph{Keep true.} 
@@ -619,7 +625,11 @@ Through the Concord she held his soul in a mighty grip, pouring her resolve into
 He would not break.
 He would not succumb to fear.
 
-\emph{Thank you, holy one.}
+\emph{Yes. Thank you, holy one.}
+
+The resphan advanced on him. 
+
+The distant noise intensified.
 
 He bared his teeth.
 
@@ -632,11 +642,11 @@ Flight was unthinkable.
 
 He raised the gun and stood his ground. Ready to meet the resphan with his bayonet. 
 
-\emph{I will die, but at least I die a brave suchian.} 
+\emph{I will die, but at least I die a brave suchian. For the holy one!} 
 
 The resphan was upon him.
 
-The distant noise droned louder.
+The distant noise droned louder as if coming nearer.
 
 ``Asheen! Zotha!'' he cried. He thrust with the bayonet.
 
@@ -650,7 +660,7 @@ Bruised. Not cut.
 
 It must have been a clumsy hit, perhaps with the flat of the blade. 
 
-Aeocryth made a desperate grunt.
+A strangled grunt from Aeocryth.
 
 A gunshot barked from behind him, cutting through the droning sound. 
 Another bullet struck the resphan’s wings, tearing free feathers and blood. 
@@ -665,7 +675,7 @@ Sipel charged with her bayonet.
 
 Kepra's self-preservation instincts kicked in and he rolled away just as the resphan kicked in direction. 
 The talon bit into his scales, but he avoided getting disemboweled.
-The resphan flapped her wings and leapt past him. 
+The resphan flapped her wings and leapt past him\dash{}her wings still strong despite the wounds. 
 She kicked with one foot, then the other.
 %Kepra's directionKepra a savage kick and strides past. She swings her sword. 
 % It cuts clean through Sipel’s unarmoured body and she falls to the ground, dead where she stands. 
@@ -678,9 +688,10 @@ Sorrow.
 
 Perhaps even guilt.
 
-Was this the same feeling that made her cry out before, that Kepra mistook for fear?
+Was this the same feeling that made her cry out before? Kepra had mistaken it for fear. Was it actually compassion, grief for her slain defenders?
 
 Meanwhile Kepra had found his feet. 
+
 His gun was out of reach now. 
 
 The resphan landed and turned. 
@@ -694,10 +705,10 @@ The resphan bore down on him yet again.
 %The resphan turns around. She faces Kepra. 
 %Again he feels a clutch of dread. His bruise ached, remembering their last clash. 
 
-Kepra felt a clutch of dread.
-But it was dull, blurred. He was removed from it, as if underwater. 
+Kepra was aware of clutch of dread.
+But it was dull, blurred. He was removed from it, as if swimming in water. 
 Around him was the Concord. 
-It was thick. 
+It was thick and warm. 
 His limbs moved with it. 
 His legs were Asheen. 
 His hand was Zotha. 
@@ -706,13 +717,13 @@ His hand was Zotha.
 
 Asheen took a step, placing Kepra's body between the hierophant and the resphan.
 
-The droning grew ever louder.
+The droning was now thunder.
 
 Zotha raised Kepra's hand and dagger. 
 
 The resphan took a step and flicked her sword, then kicked. The first hit bashed away his weapon. The second stabbed into his side. 
-She withdrew her foot again. 
-Kepra fell on his face. 
+She withdrew her foot and
+Kepra fell on his snout. 
 
 Asheen clenched. Zotha pulled. But Kepra's muscles did not obey.
 He was too weak now.
@@ -721,7 +732,7 @@ Blood poured out.
 
 At this moment there rushed in a completely new sensation in the Concord. 
 A colossal presence intruded upon his mind.
-But where Aeocryth's grip had been focused, this was omnipresent, enveloping him and all of them.
+Where Aeocryth's grip had been focused, this was omnipresent, enveloping him and all of them.
 
 A wave of fire and fury. 
 
@@ -732,7 +743,7 @@ A consuming maelstrom of raw Zotha.
 In the physical world, a roar from above split the air. 
 A machine voice booming with Epitomes of vengeance and hatred.
 
-And then blasts of cannons. 
+And in the next moment, blasts of cannons. 
 
 The resphan gave a start and snapped around to look up at the sky behind Kepra. 
 Kepra's jaw and skull shook as the earth beneath him buckled from the impact of great lead balls smashing into the ground. 
@@ -748,7 +759,7 @@ A great crocodilian mouth roared dreadful spellwords in Mystic Talaac, and each 
 
 \emph{Iscrafel.} 
 
-\emph{Exalted Lord Iscrafel.} 
+\emph{Exalted Lord Quessanth Iscrafel.} 
 
 \emph{The Dragonlord is come.}
 
@@ -775,13 +786,14 @@ Kepra’s blood pours onto the ground as he watches in a daze.
 The resphan and her two fellows charge the dragon. 
 Iscrafel fires his guns and tears through one. 
 The other two falter.
-For one instant. 
+%For one instant. 
+A blink of an eye.
 Then Iscrafel is upon them. 
 The dragon lashes out with an enormous blade embedded in his metallic arm. 
 % Iscrafel closes and lashes out with an enormous blade embedded in his metallic arm. 
 An explosion of sparks erupt as a resphan’s armour and wards shatter before the Juggernaut’s fury. 
 The resphan falls to the ground in two bleeding pieces. 
-The other resphan turns tail and runs. 
+The other resphan turns tail and flees. 
 Not fast enough. 
 In a savage bestial move the Dragonlord seizes the resphan in his jaws, then impales it on his vast sword-like blade. 
 
@@ -794,7 +806,7 @@ The pain fades away, replaced by numbness.
 
 The roar of the dragon’s metal wings fades. 
 
-\emph{I was able to protect the hierophant.}
+\emph{I was able to protect her.}
 
 \emph{I held true to the Epitomes.}
 
@@ -819,15 +831,19 @@ Nothingness.
 \sectionbreak
 {\Large{``{LIVE.}''}}
 
+
 \sectionbreak
 One word booms through Kepra’s senseless emptiness. 
 
 A one-word imperative.
 
-In Mystic Talaac.
+Mystic Talaac.
+
+A spellword.
 
 Spoken in a loud, metallic baritone. 
 
+%\sectionbreak
 Pain returns. 
 
 His head feels pounded with hammers. 
@@ -836,7 +852,7 @@ His body burns.
 
 His limbs spin and tingle. %, but they are too weak to move. 
 
-His body and mind obeys the command of the spellword. 
+His body and mind obey the command of the spellword. 
 
 He lives.
 
@@ -850,6 +866,8 @@ The weak evening light felt blinding.
 
 The first face he saw was the gentle Aeocryth. 
 
+``You live!'' says Aeocryth with a beaming smile. 
+
 Looming over them was a gigantic black-scaled and metallic form.
 
 \emph{Iscrafel.}
@@ -859,23 +877,21 @@ Looming over them was a gigantic black-scaled and metallic form.
 % Black-scaled Iscrafel gives a toothy smile. 
 %The Dragonlord gave a toothy smile.
 
-``You live!'' says Aeocryth with a beaming smile. 
-
-He still felt battered and dazed, but Kepra could tell that his body was slowly recovering now. 
+Kepra still felt battered and dazed, but he could tell that his body was slowly recovering now. 
 %He can tell he’s recovering. 
 He struggled onto all fours. 
 
 ``Exalted Lord Iscrafel.'' Kepra croaked. ``Hierophant Aeocryth.''
 
-``What is your name, brave fount?'' says Aeocryth. 
+``Rest, brave fount,'' said Aeocryth. ``What is your name?''
 
-Kepra could not help noticing how her hand was softly caressing Lord Iscrafel’s giant metal claw.
+Kepra could not help noticing how the old cleric's hand was softly caressing Lord Iscrafel’s giant metal claw.
 
 ``Filima Kepra, holy one.'' 
 
 Iscrafel bent down and touched Kepra's shoulder with a heavy bladed claw. 
 He gave a toothy grin.
-``You have my thanks, Filima. My beloved Aeocryth would have died if not for you. You are a brave warrior.'' 
+``You have my thanks, Filima,'' rumbled his metallic voice. ``My beloved Aeocryth would have died if not for you. You are a brave warrior.'' 
 
 ``I am no warrior, Exalted Lord. I am a drummer.''
 
@@ -907,7 +923,7 @@ Few had been as lucky as him.
 %lucky enough that they could be healed. 
 In fact, few of anything remained alive. 
 
-In the distance he could hear the footsteps of the fleeing resphan army. 
+In the distance he thought he could hear the footsteps of the fleeing resphan army. 
 
 ``Where is your army, Exalted Lord?''
 
@@ -917,9 +933,13 @@ Iscrafel raised an eyebrow\dash{}one of the fleshy parts of his face.
 It dawned on Kepra. 
 
 \emph{%
-    There is no army. There never was. The order was not ``hold until we come''. It was ``hold until I come''.}
+    There is no army. There never was. The order was not ``hold until we come''. It was ``hold until I come''.%
+}
 
-Iscrafel grinned again, apparently guessing his thoughts. ``You did well, Filima. You all did well. Many fell, but no one broke. Despite the resphain's sorcerous attempts to cow you, you held. With Zotha and Asheen in heart, you held. The battle of Cressax is won.''
+He pictured thousands of humans fleeing before the dragon.
+
+Iscrafel grinned again, apparently guessing his thoughts. 
+``You did well, Filima. You all did well. Many fell, but no one broke. Despite the resphain's sorcerous attempts to cow you, you held. With Zotha and Asheen in heart, you held. The battle of Cressax is won.''
 
 
 
@@ -934,7 +954,9 @@ Iscrafel was clad only in his lesser body now\dash{}half machine and hugely mass
 ``And I hate puppeteering people!'' she continued. 
 ``I had to forcibly \emph{drag} three suchians between me and that resphan. Two of them got killed. I killed them. You only barely saved the third. And feeling each of them die was worse than if I had just taken the blow myself!''
 
-Iscrafel gazed out over the battlefield beyond the walls as he listened. He remained silent. 
+Iscrafel gazed out over the battlefield beyond the walls as he listened. 
+%His metal claws idly scraped on the walls.
+He remained silent. 
 
 %``At times I wished I had never become a hierophant. 
 ``You should not have told them to protect me `at all costs'!''
@@ -951,10 +973,13 @@ Now it was her turn to be silent.
 ``We need you. Zotha needs you,'' said Iscrafel.
 
 Aeocryth hesitated. She nodded slowly. ``Aye,'' she whispered. ``Zotha.''
+
+``You did well. You kept them together. Even those humans. You are one of the best hierophants we have. Better than some Mysteriarchs.''
+
 She sighed. 
 ``I will never be a Mysteriarch. At times I wished I had never even become a hierophant.'' 
 She whirled on him. 
-``And I will never let myself grow numb to death as you have, Quessanth!'' 
+``And I will not let myself grow numb to death as you have, Quessanth!'' 
 
 He smiled, more softly now. ``Good. Agreed. I will do the killing so that you may do the healing.''
 
